# kyosho-backup

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: IMPLEMENTATION_GUIDE.md  PHASE10_IMPLEMENTATION.md  REQUIREMENTS_ANALYSIS.md  SCOPE_PROGRESS.md  SUMMARY-industry-research.md  industry-research-2025-backup-tools.md  requirements.md  ssh_client_optimization_proposal.md  technical-architecture-report.md  technical-async-blocking-io-best-practices-2025.md  technical-decision-matrix.md  technical-research-file-transfer-optimization.md  technical-research-ssh-sftp.md
mockups/: design-theme-selector.html
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: backup-app-capability.json  main.json
src-tauri/src/: auth_manager.rs  backup_history.rs  config_manager.rs  lib.rs  main.rs  ssh_client.rs
src/components/: PinAuthModal.tsx  SettingsForm.tsx
src/hooks/: useAuth.tsx
src/pages/: HistoryPage.tsx  MainPage.tsx  SettingsPage.tsx
src/types/: tauri.ts
src/utils/: tauriApi.ts
