[package]
name = "kyosho-backup"
version = "0.1.0"
description = "Cross-platform server backup automation tool built with Tauri, React, and TypeScript"
authors = ["Yuta Matsuura"]
edition = "2021"

[lib]
name = "kyosho_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kyosho-backup"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
thiserror = "1.0"
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
dirs = "5.0"
rand = "0.8"
argon2 = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
